ubiquity (2.15.23) UNRELEASED; urgency=low

  * Attempt to remove oem user again in the oem-config/post-start, after
    oem-config-first-boot setup has been completed. (LP: #1231166)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Fri, 11 Oct 2013 10:12:57 +0100

ubiquity (2.15.22) saucy; urgency=low

  * In U1 plugin fix ping_u1_url to not include body in a GET
    request. (LP: #1229684)
  * Update test-suite with the new expected call.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Thu, 10 Oct 2013 10:48:39 +0100

ubiquity (2.15.21) saucy; urgency=low

  [ Aurélien Gâteau ]
  * KDE: Hardcode the KDE platform plugin to get Oxygen palette

  [ Dmitrijs Ledkovs ]
  * Allow "skip" navigation control to take focus, and thus be part of the
    tab switch chain. (LP: #1231175)
  * Disable Ubuntu One plugin at OEM config setup stage (LP: #1233879)
  * Declare oem_config as False in the mock controller for the Ubuntu One plugin tests.
  * Keep Ubuntu One page for OEM client setup stage (LP: #1233879)
  * Skip Ubuntu One page when offline (LP: #1220804)
  * Automatic update of included source packages: flash-kernel
    3.0~rc.4ubuntu42, partman-auto 107ubuntu3, partman-basicfilesystems
    84ubuntu1, partman-btrfs 14ubuntu1, partman-ext3 79ubuntu1.
  * Automatic update of included source packages: hw-detect 1.95ubuntu1.

  [ Colin Watson ]
  * Update translations from Launchpad.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Mon, 07 Oct 2013 11:23:52 +0100

ubiquity (2.15.20) saucy; urgency=low

  [ Colin Watson ]
  * (Build-)depend on python3-icu rather than transitional python3-pyicu.

  [ Howard Chan ]
  * Fix the new Ubuntu Studio wallpaper backdrop for ubiquity. (LP: #1229651)

  [ Dmitrijs Ledkovs ]
  * Add dependencies on python3-pam.
  * Establish a PAM session with logind "greeter" mode in ubiquity-dm,
    resolving the following bugs:
    - WiFi page not working (LP: #1178638) (LP: #1220193)
    - Sound system / a11y not available (LP: #1229416)